# pwd_encrypted

./: .gitignore  MANIFEST.in  README.md  setup.cfg
pwd_encrypted/: add.bash  add.py  add_test.py  apagar.py  clean.py  create_encryption_key.py  creation.txt  db.py  decrypt_pwd_column.py  delete.py  encrypt_all_column.py  encrypt_pwds_db.py  gpg_data_key_for_pass  main.py  pwd.db  search.py  see.py  site_repeat.bash  sitio_choice.txt  srch_q.bash  srch_results.bash  srchfzf.py  test.exp  test.py  test_see.py  teste.py  update.py  watchdog_encrypt_pwd_column.py  xattr_encrypt_pwd_column.py
pwd_encrypted/configs/: config.py
pwd_encrypted/docs/: conf.py  index.rst
pwd_encrypted/docs/_build/doctrees/: all_commands.doctree  environment.pickle  index.doctree
pwd_encrypted/docs/_build/html/: .buildinfo  all_commands.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pwd_encrypted/docs/_build/html/.doctrees/: environment.pickle  index.doctree
pwd_encrypted/docs/_build/html/_modules/: index.html
pwd_encrypted/docs/_build/html/_modules/click/: core.html
pwd_encrypted/docs/_build/html/_modules/pwd_encrypted/: add.html  delete.html  search.html  (+2 more)
pwd_encrypted/docs/_build/html/_sources/: all_commands.rst.txt
pwd_encrypted/enc/: .encfs6.xml  Jm8-yzaeTLdGyvHAAXky7TOM
pwd_encrypted/old_pwd_crypt/: encrypt_pwds_db.py  password.key  search.py
pwd_encrypted/one_offs/: README.txt  bulk_encrypt.py  encfs_key_creation.py  encrypt_pwd_column.py
pwd_encrypted/partials/: delete.txt  search_or_update_encrypted.txt  tput.txt
