[metadata]
name =
version = 0.1
author = mclds
author_email = mclds@protonmail.com
description =
long_description = file: README.md
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[flake8]
extend-ignore = E501
verbose = 2
show-source = True