[metadata]
name = pwd_crypt
version = 2.0
author = mclds
author_email = mclds@protonmail.com
description = Simple cli encrypted password manager.
long_description = file: README.md
url = https://github.com/miccaldas/pwd_encrypted
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
verbose = 2
show_source = True

[flake8]
extend-ignore = F401 F841 W605 E704, E722, E1, W1, E2, W2, E3, W3, E4, W4, E5, W5, E731
max-line-length = 180
verbose = 2
show_source = True

[pdbr]
style = yellow
use_traceback = True
theme = friendly

[options.entry_points]
console_scripts =
    pwdsrch = pwd_encrypted.srchfzf:srchfzf
    pwdadd = pwd_encrypted.add:call_add
    pwddlt = pwd_encrypted.delete:call_del
    pwdall = pwd_encrypted.see:call_see
    pwdupdt = pwd_encrypted.update:call_update
